# Raster

./: .gitignore  Cargo.toml  PROMPT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
crates/raster-core/: Cargo.toml
crates/raster-core/src/: block.rs  db.rs  error.rs  lib.rs
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: indexer_stub.rs  lib.rs  ollama_client.rs  paths.rs  pty.rs  settings.rs  workbooks.rs  workflows.rs
src/components/agent/: AgentDrawer.tsx
src/components/explorer/: ExplorerPanel.tsx
src/components/layout/: AppShell.tsx
src/components/palette/: CommandPalette.tsx
src/components/settings/: SettingsModal.tsx
src/components/terminal/: PtySessionPane.tsx  TerminalPane.tsx  TerminalWorkspace.tsx
