[package]
name = "app"
version = "0.1.0"
description = "Raster — macOS terminal workbench"
authors = ["Raster contributors"]
license = "MIT OR Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
raster-core = { path = "../crates/raster-core" }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
